// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Direction 1`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  overflow: hidden;
  vertical-align: middle;
  height: 24px;
  width: 24px;
}

.c7 > svg {
  fill: currentColor;
  height: 100%;
  width: auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  color: rgb(41,41,41);
  background-color: rgb(245,245,245);
  padding: 2px;
  border: 0 solid transparent;
  border-radius: 4px;
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  text-align: left;
  cursor: pointer;
}

.c3 .c4 {
  padding: 0 8px;
}

.c3 .c4 > *:last-child > svg {
  width: 100%;
  height: 100%;
  cursor: pointer;
  background-color: transparent;
  fill: rgb(102,102,102);
}

.c3:hover {
  background-color: rgb(240,240,240);
}

.c3:focus-within {
  outline: none;
  background-color: rgb(240,240,240);
  border: 2px solid rgb(69,39,160);
  padding: 0;
}

.c3:active {
  background-color: rgb(240,240,240);
  border: none;
  padding: 2px;
}

.c9 {
  position: fixed;
  top: 0;
  width: 360px;
  border-radius: 4px;
  margin: 8px 16px;
  right: 0;
}

.c0 {
  color: rgb(41,41,41);
}

.c1 {
  position: absolute;
  z-index: 0;
}

.c8 {
  position: absolute;
  z-index: 1;
}

.c2 {
  width: 100%;
}

.c6 {
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  display: unset;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: inherit;
  color: rgb(41,41,41);
  background-color: transparent;
  border-width: 0;
  outline: none;
}

.c6::-webkit-input-placeholder {
  color: rgb(122,122,122);
}

.c6::-moz-placeholder {
  color: rgb(122,122,122);
}

.c6:-ms-input-placeholder {
  color: rgb(122,122,122);
}

.c6::placeholder {
  color: rgb(122,122,122);
}

<div
  className="c0"
  id="practical-root"
>
  <div>
    <div
      className="c1"
      id="layer-7"
    >
      <div
        className="c2"
        onBlur={[Function]}
        width="full"
      >
        <div
          className="c3"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          onPointerDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="c4 c5"
          >
            <input
              className="c6"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="test1"
            />
            <span
              className="c7"
              role="img"
              size="medium"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M8.71 11.71l2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="c8"
      id="layer-8"
    >
      <div
        className="c9"
      />
    </div>
  </div>
</div>
`;

exports[`Select Direction 2`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  overflow: hidden;
  vertical-align: middle;
  height: 24px;
  width: 24px;
}

.c7 > svg {
  fill: currentColor;
  height: 100%;
  width: auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  color: rgb(41,41,41);
  background-color: rgb(245,245,245);
  padding: 2px;
  border: 0 solid transparent;
  border-radius: 4px;
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  text-align: left;
  cursor: pointer;
}

.c3 .c4 {
  padding: 0 8px;
}

.c3 .c4 > *:last-child > svg {
  width: 100%;
  height: 100%;
  cursor: pointer;
  background-color: transparent;
  fill: rgb(102,102,102);
}

.c3:hover {
  background-color: rgb(240,240,240);
}

.c3:focus-within {
  outline: none;
  background-color: rgb(240,240,240);
  border: 2px solid rgb(69,39,160);
  padding: 0;
}

.c3:active {
  background-color: rgb(240,240,240);
  border: none;
  padding: 2px;
}

.c9 {
  position: fixed;
  top: 0;
  width: 360px;
  border-radius: 4px;
  margin: 8px 16px;
  right: 0;
}

.c0 {
  color: rgb(41,41,41);
}

.c1 {
  position: absolute;
  z-index: 0;
}

.c8 {
  position: absolute;
  z-index: 1;
}

.c2 {
  width: 100%;
}

.c6 {
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  display: unset;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: inherit;
  color: rgb(41,41,41);
  background-color: transparent;
  border-width: 0;
  outline: none;
}

.c6::-webkit-input-placeholder {
  color: rgb(122,122,122);
}

.c6::-moz-placeholder {
  color: rgb(122,122,122);
}

.c6:-ms-input-placeholder {
  color: rgb(122,122,122);
}

.c6::placeholder {
  color: rgb(122,122,122);
}

<div
  className="c0"
  id="practical-root"
>
  <div>
    <div
      className="c1"
      id="layer-9"
    >
      <div
        className="c2"
        onBlur={[Function]}
        width="full"
      >
        <div
          className="c3"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          onPointerDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="c4 c5"
          >
            <input
              className="c6"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="test1"
            />
            <span
              className="c7"
              role="img"
              size="medium"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M8.71 11.71l2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="c8"
      id="layer-10"
    >
      <div
        className="c9"
      />
    </div>
  </div>
</div>
`;

exports[`Select Other 1`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  overflow: hidden;
  vertical-align: middle;
  height: 24px;
  width: 24px;
}

.c7 > svg {
  fill: currentColor;
  height: 100%;
  width: auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  color: rgb(41,41,41);
  background-color: rgb(245,245,245);
  padding: 2px;
  border: 0 solid transparent;
  border-radius: 4px;
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  text-align: left;
  cursor: pointer;
}

.c3 .c4 {
  padding: 0 8px;
}

.c3 .c4 > *:last-child > svg {
  width: 100%;
  height: 100%;
  cursor: pointer;
  background-color: transparent;
  fill: rgb(102,102,102);
}

.c3:hover {
  background-color: rgb(240,240,240);
}

.c3:focus-within {
  outline: none;
  background-color: rgb(240,240,240);
  border: 2px solid rgb(69,39,160);
  padding: 0;
}

.c3:active {
  background-color: rgb(240,240,240);
  border: none;
  padding: 2px;
}

.c3,
.c3:hover,
.c3:focus {
  background-color: rgb(255,235,238);
  border-color: rgb(211,47,47);
}

.c9 {
  position: fixed;
  top: 0;
  width: 360px;
  border-radius: 4px;
  margin: 8px 16px;
  right: 0;
}

.c0 {
  color: rgb(41,41,41);
}

.c1 {
  position: absolute;
  z-index: 0;
}

.c8 {
  position: absolute;
  z-index: 1;
}

.c2 {
  width: 100%;
}

.c6 {
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  display: unset;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: inherit;
  color: rgb(41,41,41);
  background-color: transparent;
  border-width: 0;
  outline: none;
}

.c6::-webkit-input-placeholder {
  color: rgb(122,122,122);
}

.c6::-moz-placeholder {
  color: rgb(122,122,122);
}

.c6:-ms-input-placeholder {
  color: rgb(122,122,122);
}

.c6::placeholder {
  color: rgb(122,122,122);
}

<div
  className="c0"
  id="practical-root"
>
  <div>
    <div
      className="c1"
      id="layer-15"
    >
      <div
        className="c2"
        onBlur={[Function]}
        width="full"
      >
        <div
          className="c3"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          onPointerDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="c4 c5"
          >
            <input
              className="c6"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="test1"
            />
            <span
              className="c7"
              role="img"
              size="medium"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M8.71 11.71l2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="c8"
      id="layer-16"
    >
      <div
        className="c9"
      />
    </div>
  </div>
</div>
`;

exports[`Select Other 2`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  overflow: hidden;
  vertical-align: middle;
  height: 24px;
  width: 24px;
}

.c7 > svg {
  fill: currentColor;
  height: 100%;
  width: auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
  width: 100%;
}

.c10 .c4 {
  padding: 0 8px;
}

.c10 .c4 > *:last-child > svg {
  width: 100%;
  height: 100%;
  cursor: pointer;
  background-color: transparent;
  fill: rgb(102,102,102);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  color: rgb(41,41,41);
  background-color: rgb(245,245,245);
  padding: 2px;
  border: 0 solid transparent;
  border-radius: 4px;
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  text-align: left;
  cursor: pointer;
  opacity: 0.48;
  pointer-events: none;
}

.c3 .c4 {
  padding: 0 8px;
}

.c3 .c4 > *:last-child > svg {
  width: 100%;
  height: 100%;
  cursor: pointer;
  background-color: transparent;
  fill: rgb(102,102,102);
}

.c3:hover {
  background-color: rgb(240,240,240);
}

.c3:focus-within {
  outline: none;
  background-color: rgb(240,240,240);
  border: 2px solid rgb(69,39,160);
  padding: 0;
}

.c3:active {
  background-color: rgb(240,240,240);
  border: none;
  padding: 2px;
}

.c9 {
  position: fixed;
  top: 0;
  width: 360px;
  border-radius: 4px;
  margin: 8px 16px;
  right: 0;
}

.c0 {
  color: rgb(41,41,41);
}

.c1 {
  position: absolute;
  z-index: 0;
}

.c8 {
  position: absolute;
  z-index: 1;
}

.c2 {
  width: 100%;
}

.c6 {
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  display: unset;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: inherit;
  color: rgb(41,41,41);
  background-color: transparent;
  border-width: 0;
  outline: none;
}

.c6::-webkit-input-placeholder {
  color: rgb(122,122,122);
}

.c6::-moz-placeholder {
  color: rgb(122,122,122);
}

.c6:-ms-input-placeholder {
  color: rgb(122,122,122);
}

.c6::placeholder {
  color: rgb(122,122,122);
}

<div
  className="c0"
  id="practical-root"
>
  <div>
    <div
      className="c1"
      id="layer-17"
    >
      <div
        className="c2"
        onBlur={[Function]}
        width="full"
      >
        <div
          className="c3"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onPointerDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="c4 c5"
          >
            <input
              className="c6"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="test1"
            />
            <span
              className="c7"
              role="img"
              size="medium"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M8.71 11.71l2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="c8"
      id="layer-18"
    >
      <div
        className="c9"
      />
    </div>
  </div>
</div>
`;

exports[`Select SelectMarker 1`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  overflow: hidden;
  vertical-align: middle;
  height: 24px;
  width: 24px;
}

.c7 > svg {
  fill: currentColor;
  height: 100%;
  width: auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  color: rgb(41,41,41);
  background-color: rgb(245,245,245);
  padding: 2px;
  border: 0 solid transparent;
  border-radius: 4px;
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  text-align: left;
  cursor: pointer;
}

.c3 .c4 {
  padding: 0 8px;
}

.c3 .c4 > *:last-child > svg {
  width: 100%;
  height: 100%;
  cursor: pointer;
  background-color: transparent;
  fill: rgb(102,102,102);
}

.c3:hover {
  background-color: rgb(240,240,240);
}

.c3:focus-within {
  outline: none;
  background-color: rgb(240,240,240);
  border: 2px solid rgb(69,39,160);
  padding: 0;
}

.c3:active {
  background-color: rgb(240,240,240);
  border: none;
  padding: 2px;
}

.c9 {
  position: fixed;
  top: 0;
  width: 360px;
  border-radius: 4px;
  margin: 8px 16px;
  right: 0;
}

.c0 {
  color: rgb(41,41,41);
}

.c1 {
  position: absolute;
  z-index: 0;
}

.c8 {
  position: absolute;
  z-index: 1;
}

.c2 {
  width: 100%;
}

.c6 {
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  display: unset;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: inherit;
  color: rgb(41,41,41);
  background-color: transparent;
  border-width: 0;
  outline: none;
}

.c6::-webkit-input-placeholder {
  color: rgb(122,122,122);
}

.c6::-moz-placeholder {
  color: rgb(122,122,122);
}

.c6:-ms-input-placeholder {
  color: rgb(122,122,122);
}

.c6::placeholder {
  color: rgb(122,122,122);
}

<div
  className="c0"
  id="practical-root"
>
  <div>
    <div
      className="c1"
      id="layer-11"
    >
      <div
        className="c2"
        onBlur={[Function]}
        width="full"
      >
        <div
          className="c3"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          onPointerDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="c4 c5"
          >
            <input
              className="c6"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="test1"
            />
            <span
              className="c7"
              role="img"
              size="medium"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M8.71 11.71l2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="c8"
      id="layer-12"
    >
      <div
        className="c9"
      />
    </div>
  </div>
</div>
`;

exports[`Select SelectMarker 2`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  overflow: hidden;
  vertical-align: middle;
  height: 24px;
  width: 24px;
}

.c7 > svg {
  fill: currentColor;
  height: 100%;
  width: auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  color: rgb(41,41,41);
  background-color: rgb(245,245,245);
  padding: 2px;
  border: 0 solid transparent;
  border-radius: 4px;
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  text-align: left;
  cursor: pointer;
}

.c3 .c4 {
  padding: 0 8px;
}

.c3 .c4 > *:last-child > svg {
  width: 100%;
  height: 100%;
  cursor: pointer;
  background-color: transparent;
  fill: rgb(102,102,102);
}

.c3:hover {
  background-color: rgb(240,240,240);
}

.c3:focus-within {
  outline: none;
  background-color: rgb(240,240,240);
  border: 2px solid rgb(69,39,160);
  padding: 0;
}

.c3:active {
  background-color: rgb(240,240,240);
  border: none;
  padding: 2px;
}

.c9 {
  position: fixed;
  top: 0;
  width: 360px;
  border-radius: 4px;
  margin: 8px 16px;
  right: 0;
}

.c0 {
  color: rgb(41,41,41);
}

.c1 {
  position: absolute;
  z-index: 0;
}

.c8 {
  position: absolute;
  z-index: 1;
}

.c2 {
  width: 100%;
}

.c6 {
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  display: unset;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: inherit;
  color: rgb(41,41,41);
  background-color: transparent;
  border-width: 0;
  outline: none;
}

.c6::-webkit-input-placeholder {
  color: rgb(122,122,122);
}

.c6::-moz-placeholder {
  color: rgb(122,122,122);
}

.c6:-ms-input-placeholder {
  color: rgb(122,122,122);
}

.c6::placeholder {
  color: rgb(122,122,122);
}

<div
  className="c0"
  id="practical-root"
>
  <div>
    <div
      className="c1"
      id="layer-13"
    >
      <div
        className="c2"
        onBlur={[Function]}
        width="full"
      >
        <div
          className="c3"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          onPointerDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="c4 c5"
          >
            <input
              className="c6"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="test1"
            />
            <span
              className="c7"
              role="img"
              size="medium"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M8.71 11.71l2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="c8"
      id="layer-14"
    >
      <div
        className="c9"
      />
    </div>
  </div>
</div>
`;

exports[`Select Width 1`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  overflow: hidden;
  vertical-align: middle;
  height: 24px;
  width: 24px;
}

.c7 > svg {
  fill: currentColor;
  height: 100%;
  width: auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  color: rgb(41,41,41);
  background-color: rgb(245,245,245);
  padding: 2px;
  border: 0 solid transparent;
  border-radius: 4px;
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  text-align: left;
  cursor: pointer;
}

.c3 .c4 {
  padding: 0 8px;
}

.c3 .c4 > *:last-child > svg {
  width: 100%;
  height: 100%;
  cursor: pointer;
  background-color: transparent;
  fill: rgb(102,102,102);
}

.c3:hover {
  background-color: rgb(240,240,240);
}

.c3:focus-within {
  outline: none;
  background-color: rgb(240,240,240);
  border: 2px solid rgb(69,39,160);
  padding: 0;
}

.c3:active {
  background-color: rgb(240,240,240);
  border: none;
  padding: 2px;
}

.c9 {
  position: fixed;
  top: 0;
  width: 360px;
  border-radius: 4px;
  margin: 8px 16px;
  right: 0;
}

.c0 {
  color: rgb(41,41,41);
}

.c1 {
  position: absolute;
  z-index: 0;
}

.c8 {
  position: absolute;
  z-index: 1;
}

.c2 {
  width: 100%;
}

.c6 {
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  display: unset;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: inherit;
  color: rgb(41,41,41);
  background-color: transparent;
  border-width: 0;
  outline: none;
}

.c6::-webkit-input-placeholder {
  color: rgb(122,122,122);
}

.c6::-moz-placeholder {
  color: rgb(122,122,122);
}

.c6:-ms-input-placeholder {
  color: rgb(122,122,122);
}

.c6::placeholder {
  color: rgb(122,122,122);
}

<div
  className="c0"
  id="practical-root"
>
  <div>
    <div
      className="c1"
      id="layer-1"
    >
      <div
        className="c2"
        onBlur={[Function]}
        width="full"
      >
        <div
          className="c3"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          onPointerDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="c4 c5"
          >
            <input
              className="c6"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="test1"
            />
            <span
              className="c7"
              role="img"
              size="medium"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M8.71 11.71l2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="c8"
      id="layer-2"
    >
      <div
        className="c9"
      />
    </div>
  </div>
</div>
`;

exports[`Select Width 2`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  overflow: hidden;
  vertical-align: middle;
  height: 24px;
  width: 24px;
}

.c7 > svg {
  fill: currentColor;
  height: 100%;
  width: auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  color: rgb(41,41,41);
  background-color: rgb(245,245,245);
  padding: 2px;
  border: 0 solid transparent;
  border-radius: 4px;
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  text-align: left;
  cursor: pointer;
}

.c3 .c4 {
  padding: 0 8px;
}

.c3 .c4 > *:last-child > svg {
  width: 100%;
  height: 100%;
  cursor: pointer;
  background-color: transparent;
  fill: rgb(102,102,102);
}

.c3:hover {
  background-color: rgb(240,240,240);
}

.c3:focus-within {
  outline: none;
  background-color: rgb(240,240,240);
  border: 2px solid rgb(69,39,160);
  padding: 0;
}

.c3:active {
  background-color: rgb(240,240,240);
  border: none;
  padding: 2px;
}

.c9 {
  position: fixed;
  top: 0;
  width: 360px;
  border-radius: 4px;
  margin: 8px 16px;
  right: 0;
}

.c0 {
  color: rgb(41,41,41);
}

.c1 {
  position: absolute;
  z-index: 0;
}

.c8 {
  position: absolute;
  z-index: 1;
}

.c2 {
  width: 100%;
}

.c6 {
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  display: unset;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: inherit;
  color: rgb(41,41,41);
  background-color: transparent;
  border-width: 0;
  outline: none;
}

.c6::-webkit-input-placeholder {
  color: rgb(122,122,122);
}

.c6::-moz-placeholder {
  color: rgb(122,122,122);
}

.c6:-ms-input-placeholder {
  color: rgb(122,122,122);
}

.c6::placeholder {
  color: rgb(122,122,122);
}

<div
  className="c0"
  id="practical-root"
>
  <div>
    <div
      className="c1"
      id="layer-3"
    >
      <div
        className="c2"
        onBlur={[Function]}
        width="full"
      >
        <div
          className="c3"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          onPointerDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="c4 c5"
          >
            <input
              className="c6"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="test2"
            />
            <span
              className="c7"
              role="img"
              size="medium"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M8.71 11.71l2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="c8"
      id="layer-4"
    >
      <div
        className="c9"
      />
    </div>
  </div>
</div>
`;

exports[`Select Width 3`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  overflow: hidden;
  vertical-align: middle;
  height: 24px;
  width: 24px;
}

.c7 > svg {
  fill: currentColor;
  height: 100%;
  width: auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  color: rgb(41,41,41);
  background-color: rgb(245,245,245);
  padding: 2px;
  border: 0 solid transparent;
  border-radius: 4px;
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  text-align: left;
  cursor: pointer;
}

.c3 .c4 {
  padding: 0 8px;
}

.c3 .c4 > *:last-child > svg {
  width: 100%;
  height: 100%;
  cursor: pointer;
  background-color: transparent;
  fill: rgb(102,102,102);
}

.c3:hover {
  background-color: rgb(240,240,240);
}

.c3:focus-within {
  outline: none;
  background-color: rgb(240,240,240);
  border: 2px solid rgb(69,39,160);
  padding: 0;
}

.c3:active {
  background-color: rgb(240,240,240);
  border: none;
  padding: 2px;
}

.c9 {
  position: fixed;
  top: 0;
  width: 360px;
  border-radius: 4px;
  margin: 8px 16px;
  right: 0;
}

.c0 {
  color: rgb(41,41,41);
}

.c1 {
  position: absolute;
  z-index: 0;
}

.c8 {
  position: absolute;
  z-index: 1;
}

.c2 {
  width: 100%;
}

.c6 {
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  display: unset;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: inherit;
  color: rgb(41,41,41);
  background-color: transparent;
  border-width: 0;
  outline: none;
}

.c6::-webkit-input-placeholder {
  color: rgb(122,122,122);
}

.c6::-moz-placeholder {
  color: rgb(122,122,122);
}

.c6:-ms-input-placeholder {
  color: rgb(122,122,122);
}

.c6::placeholder {
  color: rgb(122,122,122);
}

<div
  className="c0"
  id="practical-root"
>
  <div>
    <div
      className="c1"
      id="layer-5"
    >
      <div
        className="c2"
        onBlur={[Function]}
        width="full"
      >
        <div
          className="c3"
          disabled={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          onPointerDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="c4 c5"
          >
            <input
              className="c6"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="test1"
            />
            <span
              className="c7"
              role="img"
              size="medium"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M8.71 11.71l2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="c8"
      id="layer-6"
    >
      <div
        className="c9"
      />
    </div>
  </div>
</div>
`;
